# The-Unsaid

./: .env.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json  vite.config.ts
.claude/: settings.local.json
backend/: .env.example  README.md  pyproject.toml  test_backend_ai.py
backend/app/: main.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: ai.py
backend/app/prompts/: base.py
backend/app/routers/: ai.py
backend/app/services/: openrouter.py
backend/tests/: conftest.py  test_ai_endpoints.py  test_openrouter_service.py
backend/the_unsaid_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: mobile-audit-checklist.md  week1-progress.md  week2-plan.md
e2e/: playwright.config.ts
e2e/tests/: ai-flow.spec.ts  auth-flow.spec.ts  encryption-flow.spec.ts  sync-flow.spec.ts
e2e/utils/: test-helpers.ts
scripts/: a11y-audit.ts  lighthouse-audit.sh
src/: app.d.ts  app.html  hooks.server.ts
src/lib/: index.ts
src/lib/components/: AIConsentModal.svelte  index.ts
src/lib/crypto/: cipher.edge-cases.svelte.test.ts  cipher.svelte.test.ts  cipher.ts  index.ts  keyStore.svelte.test.ts  keyStore.ts
src/lib/data/: index.ts  onboarding.ts  prompts.ts
src/lib/hooks/: index.ts  useAutosave.svelte.test.ts  useAutosave.svelte.ts  useBeforeUnload.svelte.ts  useKeyboardShortcuts.svelte.ts
src/lib/server/: supabase.ts
src/lib/services/: ai.test.ts  ai.ts  auth.ts  draftService.test.ts  draftService.ts  e2eStorage.ts  encryptionService.svelte.test.ts  exportService.ts  (+12 more)
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  layout.css
supabase/migrations/: 20241227_add_soft_delete.sql  20241228_add_preferences.sql  20250103_add_onboarding_prefs.sql
(+88 files in other folders)
